# Harness-Telegram

./: .gitignore  AGENTS.md  README.md  pyproject.toml
harness_telegram/: __init__.py  approvals.py  backend.py  cli.py  config.py  outbox.py  session.py  telegram.py  types.py
tests/: test_approvals.py  test_backend.py  test_config.py  test_outbox.py  test_session.py  test_telegram.py
