[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-telegram"
version = "0.1.0"
description = "Standalone Telegram Bot API transport for Emacs-Harness-style control planes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
harness-telegram = "harness_telegram.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["harness_telegram"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100
